--- a/index.html
+++ b/index.html
@@ -5,16 +5,80 @@
   <title>Staking & APR Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    button, input { padding: 8px; margin: 5px; }
-    h1, h2 { margin-bottom: 10px; }
-    .section { border: 1px solid #ddd; padding: 15px; margin-bottom: 20px; }
+    /* Global Styles & Color Scheme */
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #8e44ad, #5e3370);
+      color: #fdfdfd;
+      padding: 20px;
+      margin: 0;
+      animation: fadeIn 1s ease-in-out;
+    }
+    h1, h2, h3, p {
+      margin: 0 0 10px 0;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 2.5em;
+      text-shadow: 1px 1px 2px #000;
+    }
+    .section {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      animation: slideUp 0.8s ease-out;
+    }
+    button, input {
+      padding: 10px 15px;
+      margin: 5px;
+      border: none;
+      border-radius: 5px;
+      transition: background 0.3s ease;
+      cursor: pointer;
+    }
+    button {
+      background: #9b59b6;
+      color: #fff;
+      font-weight: bold;
+    }
+    button:hover {
+      background: #8e44ad;
+    }
+    input {
+      width: 200px;
+      border: 1px solid rgba(255,255,255,0.3);
+      background: rgba(255,255,255,0.2);
+      color: #fff;
+    }
+    /* Keyframes */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
+    @keyframes slideUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to   { transform: translateY(0); opacity: 1; }
+    }
   </style>
 </head>
 <body>
   <h1>Staking & APR Dashboard</h1>
   <button id="connectWallet">Connect Wallet</button>
-  <div id="walletAddress"></div>
+  <div id="walletAddress" style="text-align:center; margin-bottom:20px;"></div>
+
+  <!-- Dashboard & APR Section (moved to the top) -->
+  <div class="section">
+    <h2>Dashboard & APR</h2>
+    <button id="refreshDashboard">Refresh Dashboard</button>
+    <div style="margin-top: 10px;">
+      <p>Price of Monapepe (in wETH): <span id="price">-</span></p>
+      <p>Total Staked Value (in MON): <span id="totalValue">-</span></p>
+      <p>APR: <span id="apr">-</span>%</p>
+    </div>
+  </div>
 
   <!-- Staking Interface Section -->
   <div class="section">
@@ -40,18 +104,7 @@
     </div>
   </div>
 
-  <!-- Dashboard Refresh & APR Calculator Section -->
-  <div class="section">
-    <h2>Dashboard & APR</h2>
-    <button id="refreshDashboard">Refresh Dashboard</button>
-    <div style="margin-top: 10px;">
-      <p>Price of Monapepe (in wETH): <span id="price">-</span></p>
-      <p>Total Staked Value (in MON): <span id="totalValue">-</span></p>
-      <p>APR: <span id="apr">-</span>%</p>
-    </div>
-  </div>
-
-  <!-- Emergency Section (moved separately) -->
+  <!-- Emergency Actions Section (moved to its own section at the bottom) -->
   <div class="section">
     <h2>Emergency Actions</h2>
     <button id="emergencyWithdrawButton">Emergency Withdraw</button>
@@ -297,7 +350,7 @@
       }
     }
 
-    // Emergency withdraw (moved to separate Emergency Actions section)
+    // Emergency withdraw
     async function emergencyWithdraw() {
       try {
         const tx = await stakingContract.emergencyWithdraw();
