--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       <h2>Dashboard & APR</h2>
       <button id="connectWallet">Connect Wallet</button>
       <div id="walletAddress"></div>
+      <p>Price of Monapepe (in MON): <span id="price">-</span></p>
       <p>Total Staked Value (in MON): <span id="totalValue">-</span></p>
       <p>APR: <span id="apr">-</span>%</p>
     </div>
