--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
 <body>
   <div class="container">
     <header>
-      <h1>Staking Dashboard</h1>
+      <h1>Staking & APR Dashboard</h1>
       <button id="connectWallet">Connect Wallet</button>
+      <div id="walletAddress"></div>
     </header>
     
     <!-- Public Dashboard -->
