--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Staking & APR Dashboard</title>
+  <title>Staking Dashboard</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Using Roboto for a modern look -->
@@ -177,10 +177,10 @@
     
     <!-- Public Dashboard: always visible and auto-refreshes every 5 seconds -->
     <div class="card" id="publicDashboard">
-      <h2>Dashboard & APR</h2>
-      <p>Price of Monapepe (in MON): <span id="price">-</span></p>
-      <p>Total Staked Value (in MON): <span id="totalValue">-</span></p>
-      <p>APR: <span id="apr">-</span>%</p>
+      <h2>Dashboard</h2>
+      <p>Price (in MON): <span id="price">-</span></p>
+      <p>TVL (in MON): <span id="totalValue">-</span></p>
+      <p>APR: <span id="apr">-</span>% / YEAR</p>
     </div>
     
     <!-- Wallet Dashboard: only visible after wallet connection -->
