--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Staking & APR Dashboard</title>
+  <title>Staking Dashboard</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Using Roboto for a modern look -->
@@ -182,7 +182,7 @@
     
     <!-- Wallet Dashboard: visible after wallet connection; auto-refreshes every 15 seconds -->
     <div class="card" id="walletDashboard" style="display: none;">
-      <h2>Staking Interface</h2>
+      <h2>Staking</h2>
       <p>Token Balance: <span id="tokenBalance">0</span></p>
       <p>Your Staked Amount: <span id="userStaked">0</span></p>
       <p>Pending Reward: <span id="pendingReward">0</span></p>
