--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div class="container">
     <!-- Header with title and connect wallet button -->
     <header>
-      <h1>Staking & APR Dashboard</h1>
+      <h1>Staking Dashboard</h1>
       <button id="connectWallet">Connect Wallet</button>
       <!-- Wallet address will display with prefix "Connected: " -->
       <div id="walletAddress"></div>
